force-app/main/default/objects/Procedure__c/fields/CPT__c.field-meta.xml
<CustomField>
    <fullName>CPT__c</fullName>
    <label>CPT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99453</fullName>
            </value>
            <value>
                <fullName>99490</fullName>
            </value>
            <value>
                <fullName>99439</fullName>
            </value>
            <value>
                <fullName>99484</fullName>
            </value>
            <value>
                <fullName>99203</fullName>
            </value>
            <value>
                <fullName>G0506</fullName>
            </value>
            <value>
                <fullName>9999999</fullName>
            </value>
            <value>
                <fullName>99213</fullName>
            </value>
            <value>
                <fullName>G2211</fullName>
            </value>
            <value>
                <fullName>99212</fullName>
            </value>
            <value>
                <fullName>99202</fullName>
            </value>
            <value>
                <fullName>99307</fullName>
            </value>
            <value>
                <fullName>99205</fullName>
            </value>
            <value>
                <fullName>99308</fullName>
            </value>
            <value>
                <fullName>99204</fullName>
            </value>
            <value>
                <fullName>99495</fullName>
            </value>
            <value>
                <fullName>99214</fullName>
            </value>
            <value>
                <fullName>99496</fullName>
            </value>
            <value>
                <fullName>99443</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>