force-app/main/default/objects/Procedure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Thoroughcare_ID__c</columns>
    <columns>Encounter__c</columns>
    <columns>CPT__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Modifier_2__c</columns>
    <columns>Modifier_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CPT__c</field>
        <operation>equals</operation>
        <value>99495,99496</value>
    </filters>
    <label>All</label>
</ListView>